--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Corgi Camp
 description: > # this means to ignore newlines until "baseurl:"
   A sleepaway camp for Corgis
-baseurl: "/corgicamp" # the subpath of your site, e.g. /blog
+baseurl: "/campcorgi" # the subpath of your site, e.g. /blog
 url: "http://mitchkeenan.com" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
