--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,7 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: FF69B4
-  secondary: 6ecf99   
+  secondary: e55ea2   
   secondary-dark: 00283c
   muted: 777
 
